# rust-custom-handler

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  host.json
rustapp/: Cargo.toml
rustapp/src/: main.rs
src/: main.rs
